# teamgoal_template

./: .gitignore  README.md
dependentProject/: CMakeLists.txt
dependentProject/cmake/: Addtemplateproject.cmake  dependentProjectMacros.cmake  dependentProjectOptions.cmake  initializeYoda.cmake
dependentProject/cmake/templates/: dependentProjectConfig.cmake.in
dependentProject/src/: CMakeLists.txt  driver.cpp
templateproject/: CMakeLists.txt
templateproject/cmake/: initializeYoda.cmake  templateprojectMacros.cmake  templateprojectOptions.cmake
templateproject/cmake/templates/: templateprojectConfig.cmake.in
templateproject/src/: CMakeLists.txt  driver.cpp
